[package]
name = "busy-light"
version = "0.0.0"
authors = ["Anthony T. Lannutti <lannuttia@gmail.com>"]
description = "An Azure IoT Busy Light device."
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/lannuttia/busy-light-rs/"
keywords = ["iot", "busylight", "azure"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["dotenv"]

[dependencies]
clap = "2.33.0"
dotenv = { version = "0.15.0", optional = true }