[package]
name = "busy-light"
version = "0.0.0"
authors = ["Anthony T. Lannutti <lannuttia@gmail.com>"]
description = "An Azure IoT Busy Light device."
license = "MIT"
readme = "README.md"
repository = "https://github.com/lannuttia/busy-light-rs/"
keywords = ["iot", "busylight", "azure"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["dotenv"]

[dependencies]
clap = "2.33.0"
log = "0.4.8"
simplelog = "0.7.6"
dotenv = { version = "0.15.0", optional = true }